# TurboPDF

./: .eslintrc.cjs  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
src/: lib.rs
www/: package-lock.json  package.json  vite.config.ts
www/public/: index.html
www/src/: App.css  App.tsx
www/src/components/: PdfViewer.css  PdfViewer.tsx
www/src/hooks/: usePdfRenderer.ts
